# time-series-analysis

./: pyproject.toml  sales.ipynb
models/: TESLA_MODEL_S_LOS_ANGELES_model.json  TESLA_MODEL_X_LOS_ANGELES.json
